# agentPay

./: .gitignore  AgentPay_PRD.docx  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml  requirements.txt
.github/workflows/: test.yml
core/: main.py
core/auth/: router.py
core/billing/: router.py
core/database/: database.py  models.py
core/gateway/: router.py
core/services/: redis_client.py
core/workers/: aggregator.py
docs/: docusaurus.config.ts  sidebars.ts
docs/docs/: api-reference.md  deployment.md  faq-scenarios.md  intro.md  user-journey.md
docs/docs/integrations/: autogen-squad.md  crewai-scrapers.md  custom-fastapi.md
docs/src/pages/: index.module.css  index.tsx
integrations/langchain/: pyproject.toml
integrations/langchain/langchain_agentpay/: __init__.py  tools.py
sdks/python/: pyproject.toml
sdks/python/agentpay/: __init__.py  client.py
